--- a/Connect4/Views/Torneios/Index.cshtml
+++ b/Connect4/Views/Torneios/Index.cshtml
@@ -23,6 +23,9 @@
                 @Html.DisplayNameFor(model => model.QuantidadeJogadores)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Premiacao)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Inicio)
             </th>
             <th></th>
@@ -31,49 +34,59 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NomeTorneio)
-                </td>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.NomeTorneio)
+            </td>
 
-                <td>
-                    @if (SignInManager.IsSignedIn(User))
-                    {
-                        @Html.DisplayFor(modelItem => item.QuantidadeJogadores)
-                    }
-                    else
-                    {
-                        <span>***</span>
-                    }
-                </td>
-                <td>
-                    @if (SignInManager.IsSignedIn(User) &&
-                        User.Identity.Name == item.Dono)
-                    {
-                        @Html.DisplayFor(modelItem => item.Inicio)
-                    }
-                    else
-                    {
-                        <span>***</span>
-                    }
+            <td>
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    @Html.DisplayFor(modelItem => item.QuantidadeJogadores)
+                }
+                else
+                {
+                    <span>***</span>
+                }
+            </td>
+            <td>
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    @Html.DisplayFor(modelItem => item.Premiacao)
+                }
+                else
+                {
+                    <span>***</span>
+                }
+            </td>
+            <td>
+                @if (SignInManager.IsSignedIn(User) &&
+                   User.Identity.Name == item.Dono)
+                {
+                    @Html.DisplayFor(modelItem => item.Inicio)
+                }
+                else
+                {
+                    <span>***</span>
+                }
 
-                </td>
-                <td>
+            </td>
+            <td>
 
-                    @if (SignInManager.IsSignedIn(User))
-                    {
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        <span>|</span>
-                    }
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <span>|</span>
+                }
 
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    @if (SignInManager.IsSignedIn(User))
-                    {
-                        <span>|</span>
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                    }
-                </td>
-            </tr>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <span>|</span>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                }
+            </td>
+        </tr>
         }
     </tbody>
 </table>
