--- a/Connect4/Views/Manage/Index.cshtml
+++ b/Connect4/Views/Manage/Index.cshtml
@@ -11,6 +11,14 @@
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Nome"></label>
+                <input asp-for="Nome" class="form-control" disabled />
+            </div>
+            <div class="form-group">
+                <label asp-for="Nascimento"></label>
+                <input asp-for="Nascimento" class="form-control" disabled />
+            </div>
+            <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
