--- a/Connect4/Views/Shared/_LoginPartial.cshtml
+++ b/Connect4/Views/Shared/_LoginPartial.cshtml
@@ -8,8 +8,16 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserAsync(User).Result.Nome!</a>
+            <li>                
+                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">
+                @if (UserManager.GetUserAsync(User).Result.Nascimento.Day == DateTime.Now.Day &&
+               UserManager.GetUserAsync(User).Result.Nascimento.Month == DateTime.Now.Month)
+                {
+                    <span>Parabens!</span>
+                } else { 
+                    <span>Ola!</span>
+                }
+                @UserManager.GetUserAsync(User).Result.Nome!</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
