--- a/Connect4/Views/Manage/Index.cshtml
+++ b/Connect4/Views/Manage/Index.cshtml
@@ -16,7 +16,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Nascimento"></label>
-                <input asp-for="Nascimento" class="form-control" disabled />
+                <input asp-for="Nascimento" class="form-control"/>
             </div>
             <div class="form-group">
                 <label asp-for="Username"></label>
