--- a/Connect4/Views/Manage/Index.cshtml
+++ b/Connect4/Views/Manage/Index.cshtml
@@ -12,7 +12,7 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Nome"></label>
-                <input asp-for="Nome" class="form-control" disabled />
+                <input asp-for="Nome" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Nascimento"></label>
