--- a/Connect4/Views/Jogo/Tabuleiro.cshtml
+++ b/Connect4/Views/Jogo/Tabuleiro.cshtml
@@ -6,7 +6,22 @@
 <h2>Tabuleiro</h2>
 <link rel="stylesheet" href="~/css/tabuleiro.css" />
 <h1>Connect-4</h1>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6 Turno">
+            Jogador 01
+        </div>
+        <div class="col-lg-6">
+            Jogador 02
+        </div>
+    </div>
+</div>
+
+
+
 <div id="Tabuleiro" class="tabuleiro">
+
 
 </div>
 @section Scripts{
