Tela de Lobby funcionando e com restrições de usuário. Tabuleiro mock-up.

--- a/Connect4/Views/Jogo/Tabuleiro.cshtml
+++ b/Connect4/Views/Jogo/Tabuleiro.cshtml
@@ -26,5 +26,8 @@
 </div>
 @section Scripts{
     <script src="~/js/tabuleiro.js"></script>
+    <script>
+        obterJogoServidor();
+    </script>
 }
 
