--- a/Connect4/Views/Jogo/Tabuleiro.cshtml
+++ b/Connect4/Views/Jogo/Tabuleiro.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Jogo
+
 @{
     ViewData["Title"] = "Tabuleiro";
 }
@@ -19,15 +20,20 @@
 </div>
 
 
-
+//O tabuleiro será montado dentro desta div, por meio da função
+//que está no javascript: tabuleiro.js.
 <div id="Tabuleiro" class="tabuleiro">
 
 
 </div>
+//Necessário estar em uma seção para garantir que o script 
+//esteja após a importação do jquery.
 @section Scripts{
     <script src="~/js/tabuleiro.js"></script>
     <script>
+        //Obtem o ID do Jogo que está no objeto de modelo enviado pela controller.
         jogoId = "@Model.Id";
+        //Requer o jogo do servidor.
         obterJogoServidor(jogoId);
     </script>
 }
