--- a/Connect4/Views/Jogo/Lobby.cshtml
+++ b/Connect4/Views/Jogo/Lobby.cshtml
@@ -10,7 +10,7 @@
 
 <h2>Lobby</h2>
 
-<span>Jogador 1:</span>
+<span style="font-weight: bold;">Jogador 1:</span>
 @if (Model.Jogador1 == null)
 {
     <span>ESPERANDO O ADVERSÁRIO</span>
@@ -20,7 +20,9 @@ else
     <span>@Model.Jogador1.Nome</span>
 }
 
-    <span>Jogador 2:</span>
+<br />
+
+    <span style="font-weight: bold;">Jogador 2:</span>
 @if (Model.Jogador2 == null)
 {
     <span>ESPERANDO O ADVERSÁRIO</span>
@@ -29,6 +31,9 @@ else
 {
     <span>@Model.Jogador2.Nome</span>
 }
+
+<br />
+<br />
 
 @if (Model.Jogador1Id != null && Model.Jogador2Id != null)
 {
