--- a/Connect4/Views/Jogo/Tabuleiro.cshtml
+++ b/Connect4/Views/Jogo/Tabuleiro.cshtml
@@ -11,23 +11,37 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-6 Turno">
-            Jogador 01
+            @if (Model.Jogador1 == null)
+            {
+                <span>Usuario nao foi encontrado</span>
+            }
+            else
+            {
+                <span>@Model.Jogador1.Nome</span>
+            }
         </div>
         <div class="col-lg-6">
-            Jogador 02
+            @if (Model.Jogador2 == null)
+            {
+                <span>Usuario nao foi encontrado</span>
+            }
+            else
+            {
+                <span>@Model.Jogador2.Nome</span>
+            }
         </div>
     </div>
 </div>
 
 
-//O tabuleiro será montado dentro desta div, por meio da função
-//que está no javascript: tabuleiro.js.
+@*//O tabuleiro será montado dentro desta div, por meio da função
+//que está no javascript: tabuleiro.js.*@
 <div id="Tabuleiro" class="tabuleiro">
 
 
 </div>
-//Necessário estar em uma seção para garantir que o script 
-//esteja após a importação do jquery.
+@*//Necessário estar em uma seção para garantir que o script 
+//esteja após a importação do jquery.*@
 @section Scripts{
     <script src="~/js/tabuleiro.js"></script>
     <script>
