--- a/Connect4/Views/Jogo/Tabuleiro.cshtml
+++ b/Connect4/Views/Jogo/Tabuleiro.cshtml
@@ -10,7 +10,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-6 Turno">
+        <div class="col-lg-6 Turno Turno1">
             @if (Model.Jogador1 == null)
             {
                 <span>Usuario nao foi encontrado</span>
@@ -20,7 +20,7 @@
                 <span>@Model.Jogador1.Nome</span>
             }
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 Turno2">
             @if (Model.Jogador2 == null)
             {
                 <span>Usuario nao foi encontrado</span>
