Correcoes na jogada (agora mostra o jogador atual e quando nao eh sua vez de jogar) correcoes no torneio tambem

--- a/Connect4/Views/Jogo/Tabuleiro.cshtml
+++ b/Connect4/Views/Jogo/Tabuleiro.cshtml
@@ -10,7 +10,10 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-6 Turno Turno1">
+        <div id="mensagens" class="mensagens"></div>
+    </div>
+    <div class="row">
+        <div id="div1" class="div1 col-lg-6 Turno1">
             @if (Model.Jogador1 == null)
             {
                 <span>Usuario nao foi encontrado</span>
@@ -20,7 +23,7 @@
                 <span>@Model.Jogador1.Nome</span>
             }
         </div>
-        <div class="col-lg-6 Turno2">
+        <div id="div2" class="div2 col-lg-6 Turno2">
             @if (Model.Jogador2 == null)
             {
                 <span>Usuario nao foi encontrado</span>
@@ -29,7 +32,7 @@
             {
                 <span>@Model.Jogador2.Nome</span>
             }
-        </div>
+        </divid="div1">
     </div>
 </div>
 
