--- a/Connect4/Views/Torneios/Delete.cshtml
+++ b/Connect4/Views/Torneios/Delete.cshtml
@@ -24,6 +24,12 @@
             @Html.DisplayFor(model => model.QuantidadeJogadores)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Premiacao)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Premiacao)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Inicio)
         </dt>
         <dd>
