--- a/Connect4/Views/Torneios/Edit.cshtml
+++ b/Connect4/Views/Torneios/Edit.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="QuantidadeJogadores" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Premiacao" class="control-label"></label>
+                <input asp-for="Premiacao" class="form-control" />
+                <span asp-validation-for="Premiacao" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Inicio" class="control-label"></label>
                 <input asp-for="Inicio" class="form-control" />
                 <span asp-validation-for="Inicio" class="text-danger"></span>
