--- a/Connect4/Views/Torneios/Index.cshtml
+++ b/Connect4/Views/Torneios/Index.cshtml
@@ -11,7 +11,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar novo torneio</a>
 </p>
 <table class="table">
     <thead>
