--- a/Connect4/Views/Torneios/Index.cshtml
+++ b/Connect4/Views/Torneios/Index.cshtml
@@ -72,15 +72,24 @@
             </td>
             <td>
 
+                <a asp-action="Entrar" asp-route-id="@item.Id">Entrar</a>
+                <span>|</span>
 
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <span>|</span>
+                <a asp-action="Iniciar" asp-route-id="@item.Id">Iniciar Torneio</a>
+                <span>|</span>
+
+                <a asp-action="LobbyTorneio" asp-route-id="@item.Id">Entrar Torneio</a>
+                <span>|</span>
+
+
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <span>|</span>
 
 
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a>
 
-                    <span>|</span>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <span>|</span>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
 
             </td>
         </tr>
